--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <!-- ThreeJs Container -->
     <canvas id="webgl"></canvas>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script type="module" src="./src/javascript/index.js"></script>
   </body>
 </html>
